Behavior tests working
