# BurgerRoyale.Kitchen/BurgerRoyale.Kitchen.Application/Models/OrderResponse.cs
@@ -1,5 +1,6 @@
 ﻿using BurgerRoyale.Kitchen.Domain.Entities;
 using BurgerRoyale.Kitchen.Domain.Enums;
+using Flunt.Notifications;
 
 namespace BurgerRoyale.Kitchen.Application.Models;
 
