# BurgerRoyale.Kitchen/BurgerRoyale.Kitchen/Controllers/OrdersController.cs
@@ -1,4 +1,5 @@
-﻿using BurgerRoyale.Kitchen.Application.Contracts.UseCases;
+﻿using BurgerRoyale.Kitchen.API.Extensions;
+using BurgerRoyale.Kitchen.Application.Contracts.UseCases;
 using BurgerRoyale.Kitchen.Application.Models;
 using BurgerRoyale.Kitchen.Domain.Enums;
 using Microsoft.AspNetCore.Mvc;
@@ -14,12 +15,12 @@ public class OrdersController(IGetOrders service) : Controller
     [SwaggerOperation(
          Summary = "Get all orders",
          Description = "Get all orders.")]
-    [ProducesResponseType(typeof(OrderResponse), StatusCodes.Status200OK)]
+    [ProducesResponseType(typeof(List<OrderResponse>), StatusCodes.Status200OK)]
     [ProducesDefaultResponseType]
     public async Task<ActionResult> GetOrders()
     {
         var result = await service.GetAllAsync();
-        return Ok(result);
+		return Ok(result);
     }
 
     [HttpPost("{id:Guid}/update", Name = "Update")]
@@ -31,7 +32,7 @@ public class OrdersController(IGetOrders service) : Controller
     [ProducesResponseType(typeof(ValidationProblemDetails),
         StatusCodes.Status400BadRequest)]
     [ProducesDefaultResponseType]
-    public async Task<ActionResult> RequestPayment(Guid id, [FromQuery] OrderStatus? orderStatus)
+    public async Task<ActionResult> UpdateOrderStatus(Guid id, [FromQuery] OrderStatus? orderStatus)
     {
         var response = await service.UpdateOrderAsync(id, orderStatus);
         return Ok(response);
